tag機能を追加

--- a/content/blog/006_2108.md
+++ b/content/blog/006_2108.md
@@ -1,6 +1,8 @@
 +++
 title = "2021-08まとめ"
 date = 2021-09-06
+[taxonomies]
+tags =["months"]
 +++
 
 時間が経つのが異様に早い。月並みの台詞だが身に沁みて実感している、具体的には気づけばアニメの次話が放送されていることで実感している。
