--- a/content/blog/031_2210.md
+++ b/content/blog/031_2210.md
@@ -1,28 +1,29 @@
 +++
-title = "2022-10まとめ - ここにタイトルを入力"
+title = "2022-10,11まとめ - 縁切り"
 date = 2022-10-30
 [taxonomies]
 tags =["months"]
 +++
 
-
+最近全く更新していなかった。
 
 <!-- more -->
 
 ---
 
+このサイトを知っているとあるリアルの知人と縁を切りたかったので、twitterアカウントを消してブログのURLを変えた。
 
+彼は、多分、恐らく、きっと、俺のことを嫌っているんだろうが、そういう人間に俺の思考がどうだこうだというのを覗き見されたくない。
 
+意識過剰かもしれないが。
+s
 ## 今月のコンテンツ
 + 今期アニメ
     + デリシャスパーティ♡プリキュア(視聴中)
-    + シャインポスト（視聴中）
     + 異世界おじさん（視聴中）
     + うたわれるもの 二人の白皇
     + 新米錬金術師の店舗経営
     + ぼっち・ざ・ろっく！
-    + 勇者パーティーを追放されたビーストテイマー、最強種の猫耳少女と出会う
-    + 不徳のギルド
     + Do It Yourself!! -どぅー・いっと・ゆあせるふ-
     + チェンソーマン
     + 恋愛フロップス
@@ -43,22 +44,9 @@ tags =["months"]
     + 僕が愛したすべての君へ
     + 君を愛したひとりの僕へ
     + 映画デリシャスパーティ プリキュア
+    + すずめの戸締まり
 + 漫画
-    + 
+    + ブルー・ピリオド13巻
 + 展
     + 国宝 東京国立博物館のすべて
 
-<br>
-
-## 雑感(ネタバレあり)
-### 接種して良かったコンテンツ
-#### 映画デリシャスパーティ プリキュア
-
-
-### 言及すべき良いコンテンツ
-#### てっぺんっ!!!!!!!!!!!!!!!
-
-
-
-### 今後触れることはないコンテンツ
-#### Engage Kiss
