--- a/content/blog/034_SC.md
+++ b/content/blog/034_SC.md
@@ -21,7 +21,7 @@ tags =["diary"]
 
 とまあ、受験した結果は以下のようになりました。
 
-![[Pasted image 20221224233949.png]]
+[Pasted image 20221224233949.png](https://simulacre-simulacre.netlify.app/images/034_00.jpg)
 
 今回の試験はめちゃくちゃ簡単な当たりの年でした。ネットを見ても簡単だったという意見が多数派だったので。
 
